--- a/JPA-APP-1/.classpath
+++ b/JPA-APP-1/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="D:/NIT/Advance Java/JDBC_jar.File/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Tomcat 10.1/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
